tests/compile_errors/error-message.buzz
// Hello world
fun fail() > void !> obj{ message: str } {
    throw .{ message = "Hello world" };
}

fun depth() > void !> obj{ message: str } {
    fail();
}

test "Throwing an object instance with a message field" {
    depth();
}
